--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,25 @@
 
     <color name="colorSnackBarSuccess">#8BC34A</color>
     <color name="colorSnackBarError">#F72400</color>
+
+    <color name="broun10">#F5D042</color>
+    <color name="broun2">#FFDFDE</color>
+    <color name="blue1">#00539C</color>
+    <color name="broun1">#6d4c41</color>
+    <color name="orenge1">#f4511e</color>
+    <color name="light_green">#6fc27c</color>
+
+    <color name="colorPrimary">#ED2173</color>
+    <color name="colorPrimaryDark">#222934</color>
+    <color name="colorAccent">#ED2173</color>
+    <color name="colorThemePink">#ED2173</color>
+    <color name="colorThemeOrange">#F4442d</color>
+    <color name="colorPrimaryText">#222934</color>
+    <color name="colorSecondaryText">#4F3D3D</color>
+    <color name="colorWhite">#FFFFFF</color>
+
+
+    <color name="colorLightGrey">#F1F1F1</color>
+    <color name="colorBorder">#E8E6E6</color>
+    <color name="colorDarkGrey">#878787</color>
 </resources>
