--- a/app/src/main/res/layout/activity_post_detailes.xml
+++ b/app/src/main/res/layout/activity_post_detailes.xml
@@ -23,7 +23,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/settingUpBtn"
+            android:id="@+id/definitionBtn"
             style="@style/AppTheme.Button1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
