--- a/app/src/main/res/layout/activity_get_next_post.xml
+++ b/app/src/main/res/layout/activity_get_next_post.xml
@@ -34,7 +34,7 @@
         android:layout_marginTop="5dp"
         android:fontFamily="@font/a103_gadi_almog_regular_aaa"
         android:gravity="center"
-        android:text="רוצה לעבר למייל אחר"
+        android:text="רוצה לעבר לפוסט אחר"
         android:textColor="@color/colorPrimaryText"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/a103_gadi_almog_regular_aaa"
         android:gravity="center"
-        android:text="הנה זה בא..."
+        android:text="זה המקום..."
         android:textColor="@color/colorPrimaryText"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
