--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -60,6 +60,7 @@
         android:gravity="center_horizontal"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lottie" />
@@ -71,6 +72,7 @@
         android:fontFamily="@font/a103_gadi_almog_regular_aaa"
         android:gravity="center_horizontal"
         android:textSize="20sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_text3" />
@@ -79,6 +81,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
+        android:visibility="gone"
         android:fontFamily="@font/a103_gadi_almog_regular_aaa"
         android:gravity="center_horizontal"
         android:textColor="#FFFFFF"
@@ -93,11 +96,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/teal_700"
         android:fontFamily="@font/a101_ankaclm_bold_webfont"
-        android:text="קצת הסברים על הפעלת האפליקציה הזאת "
+        android:text="לחץ כאן כדי לקבל קצת הסברים על הפעלת האפליקציה הזאת "
         android:textColor="@android:color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
