--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,6 +21,7 @@
         android:gravity="center_horizontal"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
+        android:lineSpacingExtra="1dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
