--- a/app/src/main/res/layout/activity_articles.xml
+++ b/app/src/main/res/layout/activity_articles.xml
@@ -39,6 +39,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_yakam" />
+            <Button
+                android:id="@+id/btn_olamon"
+                style="@style/ButtonFamily10"
+                android:text="עולמון "
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btn_nachman1" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
