--- a/app/src/main/res/layout/activity_articles_details.xml
+++ b/app/src/main/res/layout/activity_articles_details.xml
@@ -7,15 +7,28 @@
     android:layout_height="match_parent"
      tools:context=".aricles.ArticlesDetails"
 
-    android:keepScreenOn="true"
-    >
-    <ScrollView
+    android:keepScreenOn="true"  >
+    <TextView
+        android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/a220_davidlibre_regular"
+        android:paddingRight="10dp"
+        android:paddingLeft="1dp"
+        android:gravity="center"
+        android:textColor="@color/light_green"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        android:layout_marginTop="80dp"
+       >
 
         <TextView
             android:id="@+id/tv_article"
@@ -29,13 +42,7 @@
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-
-
+             />
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!--android:background="@drawable/background_gradiant3"-->
