--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -19,7 +19,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btn_articles"
                 style="@style/ButtonFamily10"
@@ -27,13 +27,21 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"  />
+
+            <Button
+                android:id="@+id/btn_get_video"
+                style="@style/ButtonFamily10"
+                android:text="פס קול,וידאו "
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btn_articles" />
     <Button
         android:id="@+id/btn_grade_post"
         style="@style/ButtonFamily10"
         android:text="דרג את הפוסט הזה "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_articles" />
+        app:layout_constraintTop_toBottomOf="@id/btn_get_video" />
     <Button
         android:id="@+id/btn_grade_order"
         style="@style/ButtonFamily10"
