--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
     <style name="LoginTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxCornerRadiusBottomStart">16dp</item>
         <item name="boxCornerRadiusBottomEnd">16dp</item>
@@ -48,21 +49,33 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
-
+    </style>
+    <style name="AppTheme.Button2" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="Button">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:padding">0dp</item>
 
-        <item name="android:elevation">1dp</item>
-        <item name="android:translationZ">1dp</item>
+
+    <style name="ButtonFamily20">
+        <item name="android:fontFamily">@font/a103_gadi_almog_regular_aaa</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="boxCornerRadiusBottomStart">36dp</item>
+        <item name="boxCornerRadiusBottomEnd">36dp</item>
+        <item name="boxCornerRadiusTopStart">36dp</item>
+        <item name="boxCornerRadiusTopEnd">36dp</item>
+        <item name="boxStrokeColor">#000</item>
+        <item name="boxStrokeWidth">2dp</item>
+
+
 
     </style>
 
 
     <style name="ButtonFamily10">
-        <!--   <item name="android:fontFamily">@font/a101_ankaclm_bold_webfont</item>-->
         <item name="android:fontFamily">@font/a103_gadi_almog_regular_aaa</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/white</item>
@@ -73,10 +86,34 @@
         <item name="android:layout_marginStart">16dp</item>
         <item name="android:layout_marginEnd">16dp</item>
         <item name="android:layout_marginTop">10dp</item>
-        <!--        <item name="android:elevation">10dp</item>-->
-        <!--        <item name="android:translationZ">10dp</item>-->
         <item name="android:lineSpacingExtra">10dp</item>
     </style>
+
+    <style name="ButtonFamily12">
+        <item name="android:fontFamily">@font/a103_gadi_almog_regular_aaa</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <!-- <item name="android:backgroundTint">@color/sea</item>-->
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:lineSpacingExtra">10dp</item>
+    </style>
+
+
+
+    <style name="ButtonFamily11">
+        <item name="android:fontFamily">@font/a103_gadi_almog_regular_aaa</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+       <!-- <item name="android:backgroundTint">@color/sea</item>-->
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:lineSpacingExtra">10dp</item>
+    </style>
+
+
 
     <style name="ArticaleText1" parent="TextAppearance.AppCompat">
         <item name="android:layout_width">match_parent</item>
@@ -98,7 +135,6 @@
         <item name="android:layout_margin">2dp</item>
         <item name="android:gravity">center_horizontal</item>
     </style>
-
 
 </resources>
 
