--- a/app/src/main/res/layout/activity_video_explantion.xml
+++ b/app/src/main/res/layout/activity_video_explantion.xml
@@ -14,7 +14,7 @@
     >
 
 
-        <TextView
+       <!-- <TextView
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,14 +26,15 @@
             android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />-->
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="80dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="10dp"
             >
 
             <TextView
